passLogTest